[package]
name = "coreos-diskimage-rehydrator"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
repository = "https://github.com/cgwalters/coreos-diskimage-rehydrator"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
camino = "1.0.4"
clap = "2.33.3"
indicatif = "0.16.0"
serde = "1.0.111"
serde_bytes = "0.11.5"
serde_derive = "1.0.111"
serde_json = "1.0"
structopt = "0.3.21"
tempfile = "3.1.0"
tracing = "0.1"
tracing-subscriber = "0.2.17"
zstd = "0.7.0"
coreos-stream-metadata = { git = "https://github.com/cgwalters/stream-metadata-rust", rev = "c48ea32cf4418bd81c40f748a6c1ffe2f1e64030" }
nix = "0.20.0"
rayon = "1.5.0"

[profile.release]
debug = true
lto = "thin"
